--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,4 +1,4 @@
-# .github/workflows/ci-cd.yml
+# .github/workflows/ci.yaml
 
 name: CI/CD for Input Generator
 
@@ -33,30 +33,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: your-dockerhub-username/my-log-generator:latest, your-dockerhub-username/my-log-generator:${{ github.sha }}
-
-  # 3. CD: Kubernetes에 자동 배포
-  deploy:
-    # build-and-push 작업이 성공해야만 실행됨
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    
-    steps:
-      # (1) 코드를 다시 가져옴 (쿠버네티스 설정 파일 등을 사용하기 위해)
-      - name: Checkout code
-        uses: actions/checkout@v3
-        
-      # (2) Kubernetes 클러스터에 접속 설정
-      # 클러스터 접속 정보(kubeconfig)도 GitHub Secrets에 저장해야 함
-      - name: Set up Kubeconfig
-        uses: azure/k8s-set-context@v3
-        with:
-          method: kubeconfig
-          kubeconfig: ${{ secrets.KUBE_CONFIG_DATA }}
-          
-      # (3) 새로운 이미지로 Deployment 업데이트
-      # my-log-generator 라는 이름의 deployment를 새로운 이미지로 교체
-      - name: Deploy to Kubernetes
-        run: |
-          kubectl set image deployment/my-log-generator my-log-generator-container=your-dockerhub-username/my-log-generator:${{ github.sha }}
-          echo "Deployment updated successfully!"
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/inputgen:latest, ${{ secrets.DOCKERHUB_USERNAME }}/inputgen:${{ github.sha }}
